--- a/style.css
+++ b/style.css
@@ -1369,7 +1369,8 @@ Main navbar
 .alert__inverse { background-color: #ce8ab6; border-color: black; color: white; }
 
 .well { display: -moz-flex; display: -moz-box; /* OLD - Firefox 19 */ display: -ms-flexbox; /* TWEENER - IE 10 */ display: -webkit-flex; /* NEW - Chrome */ display: -webkit-box; /* OLD - iOS 6-, Safari 3.1-6 */ display: flex; /* NEW, Spec - Opera 12.1, Firefox 20+ */ -webkit-box-pack: center; -ms-flex-pack: center; -webkit-justify-content: center; -moz-justify-content: center; justify-content: center; -webkit-box-align: center; -ms-flex-align: center; -webkit-align-items: center; -moz-align-items: center; align-items: center; -webkit-box-direction: normal; -webkit-box-orient: vertical; -webkit-flex-direction: column; -moz-flex-direction: column; -ms-flex-direction: column; flex-direction: column; margin-left: auto; margin-right: auto; max-width: 1124px; width: 100%; border-radius: 5px; }
-.well h1 { font-size: 5rem; letter-spacing: -3px; }
+.well h1 { letter-spacing: -1px; }
+@media screen and (min-width: 600px) { .well h1 { font-size: 5rem; letter-spacing: -3px; } }
 .well p { margin-left: auto; margin-right: auto; max-width: 600px; width: 100%; }
 .well p:last-child { margin-bottom: 0; }
 
@@ -1377,7 +1378,8 @@ Main navbar
 
 .well--small { padding: 10px; }
 
-.well--img { margin-left: auto; margin-right: auto; max-width: 1800px; width: 100%; min-height: 70vh; }
+.well--img { margin-left: auto; margin-right: auto; max-width: 1800px; width: 100%; min-height: 300px; }
+@media screen and (min-width: 600px) { .well--img { min-height: 60vh; } }
 .well--img p, .well--img h3 { color: white; }
 
 .well--anim { margin-left: auto; margin-right: auto; max-width: 100%; width: 100%; width: 100%; min-height: auto; border-radius: 0; }
